--- a/gradient border button + hover effect/styles.css
+++ b/gradient border button + hover effect/styles.css
@@ -2,7 +2,6 @@
     padding: 0;
     margin: 0;
 }
-
 body {
     background: #f5f5f5;
     color: #555555;
@@ -22,9 +21,8 @@ body {
 }   
 
 .button-border {
-    /* padding: 5px; */
-    /* border-radius: 5px; */
     background: linear-gradient(56deg, rgb(238, 179, 2), rgb(115, 1, 121), rgb(203 11 133));
+
 }
 
 .button {
@@ -37,6 +35,7 @@ body {
     font-weight: bold;
     font-size: large;
     letter-spacing: 2px;
+    transition: 0.3s ease-in-out;
 }
 
 .button-border:hover {
