--- a/expandable_search-bar/styles.css
+++ b/expandable_search-bar/styles.css
@@ -36,7 +36,7 @@ body {
 
 .search-bar:hover,
 .search-bar:focus{
-    width: 250px;
+    width: 80%;
     padding-right: 20px;
 }
 .search-bar:hover::placeholder{
@@ -53,7 +53,3 @@ body {
     font-size: larger;
     font-weight: bold;
 }
-
-
-
-/* 1234567890 */
