--- a/word_carousel/styles.css
+++ b/word_carousel/styles.css
@@ -9,6 +9,70 @@ body {
     align-items: center;
     height: 100vh;
 }
+
+* {
+    margin: 0%;
+    padding: 0%;
+}
+
+.text-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    text-transform: uppercase;
+}
+
+.color-box {
+    min-width: 70px;
+    height: 30px;
+    background: #3d00e4;
+    border-radius: 5px;
+    padding: 10px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.switch-text {
+    animation: linear 4.5s infinite linear;
+    /* display: none; */
+}
+
+.switch-text:nth-child(2) {
+    animation-delay: 1.5s
+}
+
+.switch-text:nth-child(3) {
+    animation-delay: 3s;
+}
+
+@keyframes linear {
+
+    0%,
+    33.3%,
+    100% {
+        display: none;
+    }
+
+    0% {
+        display: block;
+    }
+}
+
+
+/* 
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 * {
     margin: 0%;
     padding: 0%;
@@ -31,26 +95,32 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .switch-text {
-    animation: linear 2.8s infinite linear;
-    /* display: none; */
+    position: absolute;
+    opacity: 0;
+    animation: switch 6s infinite;
 }
 
-.switch-text:nth-child(2){
-    animation-delay: 0.9s
+.switch-text:nth-child(1) {
+    animation-delay: 0s;
 }
 
-.switch-text:nth-child(3){
-    animation-delay: 1.8s;
+.switch-text:nth-child(2) {
+    animation-delay: 2s;
 }
 
-@keyframes linear {
-    30%, 100% {
-        display: none;
+.switch-text:nth-child(3) {
+    animation-delay: 4s;
+}
+
+@keyframes switch {
+    0%, 33.33%, 100% {
+        opacity: 0;
     }
-    0% {
-        display: block;
+    1% {
+        opacity: 1;
     }
-}
+} */
